fixed issue with .outer-lines on IE10 and 11

--- a/src/assets/scss/components/_navigation.scss
+++ b/src/assets/scss/components/_navigation.scss
@@ -131,10 +131,10 @@ nav.global {
   // }
 
   section.links {
-    @include grid-column(9);
+    @include grid-column(8);
   }
   section.links.short {
-    @include grid-column(3);
+    @include grid-column(4);
   }
   section.links {
     ul a {
